<resources>
    <string name="app_name">Daily leveling</string>
    <string name="per_fi_txt">100%</string>
    <string name="task_title">Task Title</string>
    <string name="priority_prompt">Select priority</string>
    <string name="task_text_hint">Enter task text here</string>
    <string name="task_text_label">Task text:</string>
    <string name="priority_label">Priority:</string>
    <string name="add_task_button_text">Add task</string>
    <string name="title_task">New task</string>
    <string name="button_text">Button Text</string>
    <string name="user_lvl_template">12 LVL</string>
    <string name="menu_b_description">Menu</string>
    <string name="account_button_description">Account</string>
    <string name="category_button_text">Category</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="button_value">Button Value</string>
    <string name="button_description">Button Description</string>
    <string name="button_title">Button Title</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="type">Type</string>
    <string name="type_of_task">Type of task</string>
    <string name="default_value">Default</string>
    <string name="default_value_n">1</string>
    <string name="priority">Priority</string>
    <string name="how_important_is_this_task_for_you">How important is this task for you?</string>

</resources>