<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    android:foreground="?attr/selectableItemBackground"
    android:backgroundTint="?attr/colorSurface">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_add_24"
            app:tint="?attr/colorPrimary"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/button_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textColor="?attr/colorOnSurface"/>
            <TextView
                android:id="@+id/button_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_description"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/button_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
           android:textColor="?attr/colorPrimary"
            android:text="@string/button_value"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>