<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:backgroundTint="?attr/colorSurface">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_b"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginHorizontal="8dp"
                android:elevation="0dp"
                android:scaleType="center"
                android:src="@drawable/baseline_menu_24"
                app:tint="?attr/colorPrimary"
                android:contentDescription="@string/menu_b_description" />

            <TextView
                android:id="@+id/user_lvl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/user_lvl_template"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                android:textColor="?attr/colorOnSurface"/>

            <ImageView
                android:id="@+id/acc_b"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginHorizontal="8dp"
                android:elevation="0dp"
                android:scaleType="center"
                android:src="@drawable/baseline_person_24"
                app:tint="?attr/colorPrimary"
                android:contentDescription="@string/account_button_description" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorCardBorder" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

